--- a/Economic_Cal.html
+++ b/Economic_Cal.html
@@ -1,1 +1,8 @@
-<div id="economic-calendar-696371"><script type="text/javascript" src="https://www.cashbackforex.com/Content/remote/remote-calendar-widget.js"></script><script type="text/javascript"> RemoteCalendar({"Lang":"en","DefaultTime": "today","DefaultTheme": "dark","Url":"https://www.cashbackforex.com", "SubPath":"economic-calendar","IsShowEmbedButton":false,"ContainerId":"economic-calendar-696371"});</script></div>
+<!-- myfxbook.com Economic calendar widget - Start -->
+<div>
+    <script type="text/javascript" src="https://widgets.myfxbook.com/scripts/fxCalendar.js"></script>
+</div>
+<div style="font-size: 10px">
+    <a href='https://www.myfxbook.com' class='myfxbookLink' target='_self' rel='noopener nofollow'><strong>Myfxbook.com</strong></a>
+</div>
+<!-- myfxbook.com Economic calendar widget - End -->
