--- a/Cal.html
+++ b/Cal.html
@@ -1,8 +1,8 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://th.tradingview.com/markets/currencies/" rel="noopener" target="_blank"><span class="blue-text">ตลาดฟอเร็กซ์</span></a> โดย TradingView</div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-forex-cross-rates.js" async>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/currencies/forex-heat-map/" rel="noopener" target="_blank"><span class="blue-text">Forex market heatmap</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-forex-heat-map.js" async>
   {
   "width": "100%",
   "height": "100%",
@@ -14,7 +14,7 @@
   ],
   "isTransparent": false,
   "colorTheme": "light",
-  "locale": "th_TH"
+  "locale": "en"
 }
   </script>
 </div>
